--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,15 +8,29 @@ body {
       font-style: normal;
       line-height: 1.5;
       font-weight: 300;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 }
 
-/*---------------------------------- Head CSS ---------------------*/
+/*---------------------------------- Head CSS ---------------------------*/
+
 header {
+  position: fixed;
+  overflow: hidden;
+  height: 128.7px;
+  width: 100%;
+}
+
+.headsection {
+  z-index: 3;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: white;
+  position: fixed;
 }
 
 .upperhead {
@@ -64,7 +78,7 @@ a {
   background-color: rgb(231, 231, 229);
   border-bottom: 1px solid;
   border-bottom-color: rgb(63, 71, 77);
-  shadow: 0px 0px 0px 3px #000;
+  box-shadow: 0px 1.5px 9px gray;
 }
 
 nav {
@@ -140,10 +154,288 @@ nav {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   color: white;
+}
+
+.servicenav {
+  position: relative;
+  transition: all 800ms ease;
+}
+
+.servicenav:hover .dropdown {
+  display: block;
+  transition: all 600ms ease;
+  opacity: 1;
+}
+
+#servitem a:hover {
+  color: white;
+  background-color: rgb(7, 139, 255);
+}
+
+ul .dropdown {
+  display: none;
+  opacity: .0;
+  position: absolute;
+  z-index: 2;
+  width: 9rem;
+  height: 15rem;
+  padding-right: 1rem;
+  margin-top: 2rem;
+  transition: all 400ms ease;
+}
+
+#servitem a {
+  background-color: white;
+  padding: .75rem .75rem;
+  border-top: 1px solid lightgray;
+  line-height: 1.1;
+  cursor: pointer;
+  font-size: .80rem;
+  transition: all 500ms ease;
+  font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+/*---------------------------------- Body Section CSS -------------------*/
+
+.main {
+  width: 100%;
+  margin-top: 8rem;
+}
+
+.marker {
+  margin-top: 15rem;
+  border-bottom: 5px solid blue;
+}
+
+.top {
 
 }
 
-/*---------------------------------- Span CSS ---------------------*/
+/*---------------------------------- Footer Section ----------------------*/
+
+.footsection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 3;
+  width: 100%;
+  margin-top: 3rem;
+}
+
+.topfoot {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: .8rem;
+  background-color: rgb(231, 231, 229);
+  height: 700px;
+  width: 100%;
+}
+
+.foottext {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: row;
+  font-size: .8rem;
+  background-color: rgb(231, 231, 229);
+  height: 700px;
+  width: 1200px;
+}
+
+.leftfoot {
+  margin-top: 2.5rem;
+  height: 35rem;
+  width: 11.25rem;
+
+  margin-right: 10rem;
+}
+
+.footlink {
+  margin-top: .5rem;
+}
+
+.footlink a {
+  font-size: .8rem;
+  font-weight: 400;
+  font-family: 'Oswald',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  letter-spacing: .07rem;
+}
+
+.footservice {
+  display: flex;
+  flex-direction: column;
+}
+
+.footservice a {
+  padding-top: .5rem;
+  font-size: .8rem;
+  font-family: 'Oswald',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  letter-spacing: .07rem;
+}
+
+.footlink {
+  border-bottom: 2px solid rgb(7, 139, 255);
+}
+
+.leftfootimage img{
+  margin-top: 1rem;
+  width: 173px;
+}
+
+.centerfoot {
+  margin-top: 2rem;
+  background-color: white;
+  height: 30rem;
+  width: 19rem;
+  margin-right: .5rem;
+}
+
+.rightfoot {
+  margin-top: 2rem;
+  margin-left: .5rem;
+  background-color: white;
+  height: 30rem;
+  width: 19rem;
+}
+
+.bottomfoot {
+  background-color: rgb(79, 79, 79);
+  width: 100%;
+  height: 2rem;
+}
+
+.formhead {
+  margin-top: 1rem;
+  margin-left: .6rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+}
+
+.formicon {
+
+}
+
+.formtitle {
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-family: 'Oswald',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  line-height: 1.3;
+  width: 100%;
+  color: black;
+  font-size:1.8rem;
+  margin-bottom: .4rem;
+  margin-left: .7rem;
+}
+
+.inputone {
+  margin-left: .6rem;
+  font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.formlabel{
+  visibility: hidden;
+  position: absolute;
+}
+
+.inputsection {
+  color: gray;
+  margin-top: 1rem;
+  width: 94%;
+  height: 2.5rem;
+  border-top: 1px solid gray;
+  border-right: 1px solid gray;
+  border-bottom: 1px solid gray;
+  border-left: 3px solid rgb(7, 139, 255);
+  border-radius: 5px;
+  font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.inputdrop {
+  color: gray;
+  background-color: white;
+  margin-top: 1.5rem;
+  width: 96%;
+  height: 2.5rem;
+  border-top: 1px solid gray;
+  border-right: 1px solid gray;
+  border-bottom: 1px solid gray;
+  border-left: 3px solid rgb(7, 139, 255);
+  border-radius: 5px;
+  font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.textareainput {
+  color: gray;
+  background-color: white;
+  margin-top: 1.5rem;
+  width: 94%;
+  height: 8rem;
+  border-top: 1px solid gray;
+  border-right: 1px solid gray;
+  border-bottom: 1px solid gray;
+  border-left: 3px solid rgb(7, 139, 255);
+  border-radius: 5px;
+  font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.formfooter {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1rem;
+}
+
+#gform_submit_button_1 {
+    text-align: center;
+    font-family: 'Oswald',"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 1.2rem;
+    border: 1px solid white;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    background-color: rgb(243, 132, 31);
+    color: white;
+    font-weight: 400;
+    border-radius: 5px;
+    letter-spacing: .07rem;
+    cursor: pointer;
+}
+
+.footlower {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.footmediaicons {
+  display: flex;
+  align-items: flex-end;
+}
+
+.footmediaicons a{
+  margin-left: .25rem;
+  margin-right: .25rem;
+}
+
+.footlogo img{
+    display: flex;
+    width: 50%;
+  }
+
+/*---------------------------------- Bottom Foot --------------------------*/
+
+
+
+/*---------------------------------- Span CSS -----------------------------*/
 
 .bold {
   font-weight: bold;
@@ -159,4 +451,8 @@ nav {
 
 .w300 {
   font-weight: 300;
+}
+
+.space {
+  padding-top: .5rem;
 }
