--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,7 @@ body {
 /*---------------------------------- Head CSS ---------------------------*/
 
 header {
+  z-index: 3;
   position: fixed;
   overflow: hidden;
   height: 128.7px;
@@ -96,6 +97,7 @@ nav {
 }
 
 #navitem {
+  z-index: 3;
   text-align: left;
   display: flex;
   justify-content: flex-start;
@@ -143,12 +145,14 @@ nav {
 }
 
 #loginnav:hover {
+    z-index: 3;
   background-color: rgb(203, 92, 1);
 
 }
 
 
 #loginnav a {
+  z-index: 3;
   display: flex;
   justify-content: center;
   margin-left: 1.5rem;
@@ -157,26 +161,30 @@ nav {
 }
 
 .servicenav {
+  z-index: 3;
   position: relative;
   transition: all 800ms ease;
 }
 
 .servicenav:hover .dropdown {
+  z-index: 3;
   display: block;
   transition: all 600ms ease;
   opacity: 1;
 }
 
 #servitem a:hover {
+    z-index: 3;
   color: white;
   background-color: rgb(7, 139, 255);
 }
 
 ul .dropdown {
+  z-index: 3;
   display: none;
   opacity: .0;
   position: absolute;
-  z-index: 2;
+
   width: 9rem;
   height: 15rem;
   padding-right: 1rem;
@@ -185,6 +193,7 @@ ul .dropdown {
 }
 
 #servitem a {
+  z-index: 5;
   background-color: white;
   padding: .75rem .75rem;
   border-top: 1px solid lightgray;
@@ -217,7 +226,7 @@ ul .dropdown {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  z-index: 3;
+  z-index: 1;
   width: 100%;
   margin-top: 3rem;
 }
@@ -235,7 +244,7 @@ ul .dropdown {
 
 .foottext {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
   flex-direction: row;
   font-size: .8rem;
@@ -248,8 +257,6 @@ ul .dropdown {
   margin-top: 2.5rem;
   height: 35rem;
   width: 11.25rem;
-
-  margin-right: 10rem;
 }
 
 .footlink {
@@ -290,6 +297,7 @@ ul .dropdown {
   height: 30rem;
   width: 19rem;
   margin-right: .5rem;
+  margin-left: 25rem;
 }
 
 .rightfoot {
@@ -301,9 +309,17 @@ ul .dropdown {
 }
 
 .bottomfoot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: .7rem;
+  font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-style: normal;
+  font-weight: 300;
   background-color: rgb(79, 79, 79);
   width: 100%;
   height: 2rem;
+  color: white;
 }
 
 .formhead {
@@ -411,8 +427,9 @@ ul .dropdown {
 }
 
 .footlower {
+  width: 1200px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   margin-bottom: 1rem;
 }
 
@@ -427,9 +444,16 @@ ul .dropdown {
 }
 
 .footlogo img{
+  margin-right: 2rem;
     display: flex;
     width: 50%;
   }
+
+.contactbar {
+  text-align: center;
+  margin-bottom: .5rem;
+  width: 1200px;
+}
 
 /*---------------------------------- Bottom Foot --------------------------*/
 
@@ -439,6 +463,16 @@ ul .dropdown {
 
 .bold {
   font-weight: bold;
+}
+
+.doublepad {
+  margin-left: 1rem;
+  margin-right: .5rem;
+}
+
+.pad {
+  margin-left: .5rem;
+  margin-right: .5rem;
 }
 
 .blue {
