--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -208,7 +208,7 @@ nav {
   transition: all 300ms ease;
 }
 
-#navitem:hover {
+#navitem: {
   background-color: white;
   color: rgb(7, 139, 255);
   border-bottom: 3px solid rgb(7, 139, 255);
@@ -235,6 +235,11 @@ nav {
     z-index: 3;
   background-color: rgb(203, 92, 1);
 
+}
+
+#log:hover .formlogin{
+  display: block;
+  opacity: 1;
 }
 
 
@@ -519,12 +524,32 @@ ul .dropdown {
 
 }
 
-.slider {
+.scrolling-wrapper-flexbox {
   width: 100%;
-  height: 10rem;
+  margin-top: 3rem;
   display: flex;
+  height: 8rem;
+  align-items: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+
+}
+  .card img {
+    margin: 0px 5rem;
+    width: 15rem;
+    height: 6rem;
+    flex: 0 0 auto;
+  }
+
+
+
+.slider {
+  display: flex;
+  flex-wrap: nowrap;
   overflow-x: auto;
-   -webkit-overflow-scrolling: touch;
+  width: 100%;
+
 }
 
 .slide {
@@ -732,8 +757,104 @@ ul{
 .successlist {
   margin-right: 9rem;
 }
+/*-- LOGIN FORM--------------------------------------------------------------*/
+
+.form {
+  z-index: 3;
+  opacity: 0;
+  display: none;
+  position: absolute;
+  justify-content: center;
+  border: 1px dotted blue;
+  width: 15rem;
+  background-color: rgba(231, 231, 229, 0.9);
+}
+
+.sr-only {
+  display: none;
+}
 
 
+.form-control {
+  width: 90%;
+  height: 3rem;
+  color: grey;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 3.5%;
+  margin-right: 2%;
+  border-top: 1px solid gray;
+  border-right: 1px solid gray;
+  border-bottom: 1px solid gray;
+  border-left: 3px solid rgb(7, 139, 255);
+  border-radius: 5px;
+  font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.text-center{
+
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-size: .8rem;
+}
+
+.btn-orange {
+  width: 50%;
+  text-align: center;
+  padding-right: 1.8rem;
+    padding-left: 1.8rem;
+    padding-top: .35rem;
+    padding-bottom: .45rem;
+    background-color: rgb(243, 132, 31);
+color: white;
+font-family: 'Oswald',"Helvetica Neue",Helvetica,Arial,sans-serif;
+letter-spacing: .08rem;
+font-size: .8rem;
+text-transform: uppercase;
+}
+
+.checkbox {
+  margin-top: .5rem;
+}
+
+.all-caps {
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: underline;
+  text-transform: uppercase;
+  color: rgb(0, 115, 216);
+
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center !important;
+    text-align: center !important;
+    font-size: 90%;
+    padding: 0 !important;
+  font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif !important;
+    letter-spacing: .08rem;
+    transition: all 300ms ease;
+}
+
+.black-link {
+  text-decoration: underline;
+  justify-content: center !important;
+  text-align: center !important;
+  font-size: 90%;
+  padding: 0 !important;
+font-family: 'Rubik',"Helvetica Neue",Helvetica,Arial,sans-serif !important;
+}
+
+.pad {
+  height: 1rem;
+  width: 100%;
+}
 /*---------------------------------- Footer Section ----------------------*/
 
 .footsection {
@@ -972,9 +1093,17 @@ ul{
   margin-bottom: .5rem;
   width: 1200px;
 }
+/*---------------------------------- SlideShow Section CSS -------------------*/
+
 
 
 /*---------------------------------- Span CSS -----------------------------*/
+
+.text-underline {
+  margin-left: .5rem;
+  text-decoration: underline;
+  font-weight: bold;
+}
 
 .bold {
   font-weight: bold;
@@ -1125,8 +1254,73 @@ display: none;
   justify-content: center;
 }
 
+.servicetypes {
+  width: 100%;
+}
+.maincontenthome {
+  width: 100%;
 }
 
+.mainbody {
+  width: 100%;
+}
+
+}
+
+
+@media only screen and (max-width: 1050px){
+.upperhead {
+  width: 100%;
+}
+
+.main-nav ul {
+  width: 90%;
+}
+
+.main-nav {
+  width: 90%;
+}
+
+.lowerhead {
+width: 100%;
+}
+.foottext {
+  width: 100%;
+}
+
+.footlower {
+  width: 100%;
+}
+
+.mainimghome {
+  width: 100%;
+}
+
+
+.servicetypes {
+  width: 100% !important;
+}
+.maincontenthome {
+  width: 100%;
+}
+
+.mainbody {
+  width: 100%;
+}
+
+.headsection {
+  width: 100% !important;
+}
+
+.mainvid {
+  height: 500px;;
+}
+
+.contactbar {
+  width: 100%;
+}
+
+}
 
 
 /*-------------------------------------------------- New CSS ------------------------------*/
@@ -1172,7 +1366,9 @@ display: none;
   color: rgb(7, 139, 255);
 }
 
-
+.maintext img {
+  width: 80%;
+}
 
 
 
